Update image filename to use uppercase extension

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <main class="main-area">
         <!-- Foto fija -->
         <section class="photo-panel">
-          <img src="FOTOCLAU.png" alt="Tu foto" class="profile-photo" />
+          <img src="FOTOCLAU.PNG" alt="Tu foto" class="profile-photo" />
         </section>
 
         <!-- Detalle -->
