Improve clarity in failure registration description

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <p><strong>Estandarización en Registro de fallas en líneas de celulares</strong></p>
 
             <p>
-              Se identificó que el registro de reparaciones carecía de
+              Se identificó que el registro de reparaciones en líneas de celulares carecía de
               estandarización: cada técnico escribía observaciones de forma
               libre, lo que dificultaba la trazabilidad de fallas, la obtención
               de métricas y generaba pérdida de tiempo en consultas entre
