Update contact section in index.html
Removed unnecessary text from the contact section.

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             <h2>CONTACTO</h2>
 
             <p>
-              Celular/Whatsapp: " "cosita hermosa, mi debilidad, mi obsesion"
+              Celular/Whatsapp: "
               <a
                 href="https://wa.me/5491122741460"
                 target="_blank"
