Add professional experience to index.html
Added professional experience section detailing roles at various companies.

--- a/index.html
+++ b/index.html
@@ -130,6 +130,59 @@
               operativas todas las máquinas que se encuentran en el proceso
               productivo en líneas de Celulares Xiaomi.
             </p>
+            <h3>Experiencia profesional</h3>
+
+<h4>Supervisor de Instrumental, Testing y Reparación — Solnik S.A. (Río Grande, Tierra del Fuego)</h4>
+<p><strong>Período:</strong> 2020 – Actualidad</p>
+<p>Superviso la operatividad, mantenimiento y calibración de los equipos e instrumental utilizados en las líneas de producción de teléfonos Xiaomi. Mi principal objetivo es garantizar la <em>continuidad operativa</em> del proceso productivo, asegurando que las líneas de testeo y reparación mantengan su funcionamiento con la menor cantidad posible de interrupciones.</p>
+<ul>
+  <li>Coordinación de tareas en los sectores de Instrumental, Testing y Reparación.</li>
+  <li>Mantenimiento preventivo y correctivo de maquinaria industrial (equipos ITC, Brady, RAUD, CAM, KEY, entre otros).</li>
+  <li>Diseño y creación de estaciones de respaldo (back-up) para asegurar la continuidad del proceso productivo en caso de parada de una máquina.</li>
+  <li>Diagnóstico y resolución rápida de fallas para minimizar tiempos de inactividad.</li>
+  <li>Gestión de indicadores de desempeño (KPI) vinculados a productividad, eficiencia y tasa de fallas.</li>
+  <li>Capacitación técnica del personal en testeo, reparación y manipulación segura del instrumental.</li>
+  <li>Optimización de tiempos de test mediante análisis de datos e inteligencia artificial aplicada.</li>
+  <li>Colaboración con Ingeniería, Calidad y Producción en lanzamientos de nuevos modelos.</li>
+</ul>
+
+<h4>Ingeniero de Test & NPI — Samsung Electronics / Metrica S.A.</h4>
+<p><strong>Período:</strong> 2021 – 2023</p>
+<ul>
+  <li>Gestión, planificación e introducción de nuevos productos (Serie S, A, Flip & Folder).</li>
+  <li>Control de documentación técnica, flujogramas, layout, troubleshooting y esquemáticos.</li>
+  <li>Configuración y chequeo de estaciones de test RF, audio, cámara, atornilladora automática y waterproof.</li>
+  <li>Seguimiento de defectos (PPM) en etapa NPI y producción masiva. Análisis de causa raíz y reuniones diarias con plantas.</li>
+  <li>Ajustes de offset y calibración de estaciones de radiofrecuencia.</li>
+  <li>Validación de materiales RMA y gestión de reclamos técnicos con casa matriz.</li>
+  <li>Gestión de software y generación de tokens para las fábricas.</li>
+</ul>
+
+<h4>Especialista en Calidad — Samsung Electronics S.A.</h4>
+<p><strong>Período:</strong> 2019 – 2021</p>
+<ul>
+  <li>Seguimiento de indicadores de scrap y bonepile. Reuniones semanales para reducción de desperdicio.</li>
+  <li>Solicitud y control de materiales electrónicos (FOC) para reparación de placas.</li>
+  <li>Análisis y reparación de placas con esquemáticos y diagramas de troubleshooting (niveles 1, 2 y 3).</li>
+  <li>Auditorías de línea (EOS, ESD, 5S, Scratch Prevent).</li>
+  <li>Validación de materiales defectuosos y gestión de reclamos RMA.</li>
+</ul>
+
+<h4>Ingeniero de Test — BGH S.A. (Sony)</h4>
+<p><strong>Período:</strong> 2015 – 2017</p>
+<ul>
+  <li>Soporte técnico en líneas de test de productos Sony.</li>
+  <li>Mantenimiento de equipos electrónicos y neumáticos.</li>
+  <li>Desarrollo de mejoras de procesos automáticos y capacitación técnica al personal.</li>
+</ul>
+
+<h4>Análisis y Reparación de Placas — BGH S.A. (Motorola)</h4>
+<p><strong>Período:</strong> 2007 – 2015</p>
+<ul>
+  <li>Reparación de placas electrónicas (niveles 1, 2 y 3) de equipos Motorola, LG, Samsung, Nokia, Sony y Alcatel.</li>
+  <li>Reparaciones en garantía de fábrica.</li>
+</ul>
+
           </div>
 
           <!-- MEJORA CONTINUA -->
