--- a/index.html
+++ b/index.html
@@ -123,23 +123,16 @@
 
           <!-- TRABAJOS -->
           <div id="section2" class="detail-section">
-            <h2>SOLNIK</h2>
-            <p>
-              Actualmente me desempeño como Supervisor del área de Instrumental,
-              Testing y Reparación. Nuestra labor diaria consiste en mantener
-              operativas todas las máquinas que se encuentran en el proceso
-              productivo en líneas de Celulares Xiaomi.
-            </p>
-            <h3>Experiencia profesional</h3>
-
+            <h2>EXPERIENCIA PROFESIONAL</h2>
+            <h3>SOLNIK</h3>
 <h4>Supervisor de Instrumental, Testing y Reparación — Solnik S.A. (Río Grande, Tierra del Fuego)</h4>
-<p><strong>Período:</strong> 2020 – Actualidad</p>
+<p><strong>Período:</strong> 2023 – Actualidad</p>
 <p>Superviso la operatividad, mantenimiento y calibración de los equipos e instrumental utilizados en las líneas de producción de teléfonos Xiaomi. Mi principal objetivo es garantizar la <em>continuidad operativa</em> del proceso productivo, asegurando que las líneas de testeo y reparación mantengan su funcionamiento con la menor cantidad posible de interrupciones.</p>
 <ul>
   <li>Coordinación de tareas en los sectores de Instrumental, Testing y Reparación.</li>
-  <li>Mantenimiento preventivo y correctivo de maquinaria industrial (equipos ITC, Brady, RAUD, CAM, KEY, entre otros).</li>
-  <li>Diseño y creación de estaciones de respaldo (back-up) para asegurar la continuidad del proceso productivo en caso de parada de una máquina.</li>
-  <li>Diagnóstico y resolución rápida de fallas para minimizar tiempos de inactividad.</li>
+  <li>Mantenimiento preventivo y correctivo de maquinaria en los procesos productivos de celulares (Atornilladoras, máquinas de audio, Cámaras, Software, entre otros).</li>
+  <li>Armado de estaciones de respaldo (back-up) para asegurar la continuidad del proceso productivo en caso de parada de una máquina.</li>
+  <li>Diagnóstico y resolución rápida de fallas para minimizar tiempos de parada.</li>
   <li>Gestión de indicadores de desempeño (KPI) vinculados a productividad, eficiencia y tasa de fallas.</li>
   <li>Capacitación técnica del personal en testeo, reparación y manipulación segura del instrumental.</li>
   <li>Optimización de tiempos de test mediante análisis de datos e inteligencia artificial aplicada.</li>
