Revise job description for Supervisor role
Updated the description of the role at Solnik S.A. to include team collaboration.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
             <h3>SOLNIK</h3>
 <h4>Supervisor de Instrumental, Testing y Reparación — Solnik S.A. (Río Grande, Tierra del Fuego)</h4>
 <p><strong>Período:</strong> 2023 – Actualidad</p>
-<p>Superviso la operatividad, mantenimiento y calibración de los equipos e instrumental utilizados en las líneas de producción de teléfonos Xiaomi. Mi principal objetivo es garantizar la <em>continuidad operativa</em> del proceso productivo, asegurando que las líneas de testeo y reparación mantengan su funcionamiento con la menor cantidad posible de interrupciones.</p>
+<p>Superviso la operatividad, mantenimiento y calibración de los equipos e instrumental utilizados en las líneas de producción de teléfonos Xiaomi. Mi principal objetivo junto con mi equipo 
+  de técnicos es garantizar la continuidad operativa del proceso productivo, asegurando que el equipamiento de testeo y reparación mantengan su funcionamiento con la menor cantidad posible de interrupciones.</p>
 <ul>
   <li>Coordinación de tareas en los sectores de Instrumental, Testing y Reparación.</li>
   <li>Mantenimiento preventivo y correctivo de maquinaria en los procesos productivos de celulares (Atornilladoras, máquinas de audio, Cámaras, Software, entre otros).</li>
