Add company logos and links to experience section

--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
           <!-- TRABAJOS -->
           <div id="section2" class="detail-section">
             <h2>EXPERIENCIA PROFESIONAL</h2>
-            <h3>SOLNIK</h3>
+            <h3 class="titulo-con-logo">
+            <a href="https://www.solnik.com.ar" target="_blank" class="link-logo">
+            <img src="solnik-logo-large.png" alt="Solnik Logo" class="logo-empresa">
+            </a> 
+            </h3>
+
 <h4>Supervisor de Instrumental, Testing y Reparación — Solnik S.A. (Río Grande, Tierra del Fuego)</h4>
 <p><strong>Período:</strong> 2023 – Actualidad</p>
 <p>Superviso la operatividad, mantenimiento y calibración de los equipos e instrumental utilizados en las líneas de producción de teléfonos Xiaomi. Mi principal objetivo junto con mi equipo 
@@ -139,7 +144,11 @@
   <li>Optimización de tiempos de test mediante análisis de datos e inteligencia artificial aplicada.</li>
   <li>Colaboración con Ingeniería, Calidad y Producción en lanzamientos de nuevos modelos.</li>
 </ul>
-
+            <h3 class="titulo-con-logo">
+            <a href="https://www.samsung.com/ar/about-us/company-info/" target="_blank" class="link-logo">
+            <img src="samsung-logo-large.png" alt="Samsung Logo" class="logo-empresa">
+            </a> 
+            </h3>
 <h4>Ingeniero de Test & NPI — Samsung Electronics / Metrica S.A.</h4>
 <p><strong>Período:</strong> 2021 – 2023</p>
 <ul>
@@ -436,3 +445,4 @@
     
 </body>
 </html>
+
