Update link to Solnik's LinkedIn profile

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div id="section2" class="detail-section">
             <h2>EXPERIENCIA PROFESIONAL</h2>
             <h3 class="titulo-con-logo">
-            <a href="https://www.solnik.com.ar" target="_blank" class="link-logo">
+            <a href="https://ar.linkedin.com/company/etercorsolnik" class="link-logo">
             <img src="solnik-logo-large.png" alt="Solnik Logo" class="logo-empresa">
             </a> 
             </h3>
