--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
   <li>Optimización de tiempos de test mediante análisis de datos e inteligencia artificial aplicada.</li>
   <li>Colaboración con Ingeniería, Calidad y Producción en lanzamientos de nuevos modelos.</li>
 </ul>
- <div style="max-width:400px; margin:auto;">
-  <video controls style="width:100%; border-radius:10px; height:auto;">
+ <div style="max-width:500px; margin:auto;">
+  <video controls style="width:100%; max-height:200px; border-radius:10px; object-fit:cover;">
     <source src="video.mp4" type="video/mp4">
     Tu navegador no soporta video HTML5.
   </video>
