Update job experience details in index.html

--- a/index.html
+++ b/index.html
@@ -192,19 +192,21 @@
             <img src="logo-bgh-large.png" alt="BGH Logo" class="logo-empresa">
             </a> 
 </h3>
-<h4>Ingeniero de Test — BGH S.A. (Sony)</h4>
-<p><strong>Período:</strong> 2015 – 2017</p>
+
+<p><strong>Período:</strong> 2007 – 2017</p>
+<h4>Ingeniero de Test — BGH S.A. (Sony)</h4>            
 <ul>
   <li>Soporte técnico en líneas de test de productos Sony.</li>
   <li>Mantenimiento de equipos electrónicos y neumáticos.</li>
-  <li>Desarrollo de mejoras de procesos automáticos y capacitación técnica al personal.</li>
+  <li>Capacitación técnica al personal.</li>
 </ul>
 
 <h4>Análisis y Reparación de Placas — BGH S.A. (Motorola)</h4>
-<p><strong>Período:</strong> 2007 – 2015</p>
+
 <ul>
-  <li>Reparación de placas electrónicas (niveles 1, 2 y 3) de equipos Motorola, LG, Samsung, Nokia, Sony y Alcatel.</li>
-  <li>Reparaciones en garantía de fábrica.</li>
+  <li>Reparación de placas electrónicas de equipos Motorola.</li>
+  <li>Reparación nivel 2 multimarca: Motorola, Sony, Huawei, Samsung,Alcatel, Nokia.</li>
+  <li>Reparaciones en garantía de fábrica Movistar.</li>
 </ul>
 
           </div>
