--- a/index.html
+++ b/index.html
@@ -309,25 +309,27 @@
 
           <!-- ESTUDIOS -->
           <div id="section4" class="detail-section">
-            <h3>POLITÉCNICO MALVINAS</h3>
-            <p>
+            <p><strong>POLITÉCNICO MALVINAS ARGENTINAS</strong>
+              <p>
               Cursando el primer año de la Tecnicatura
               de Ciencia de Datos e Inteligencia artificial brindada por el Politécnico Malvinas de
               la ciudad de Río Grande.
             </p>
 
-            <h3>INSTITUTO TECNOLÓGICO LABORAL MENDOZA (ITM)</h3>
+            <p><strong>INSTITUTO TECNOLÓGICO MENDOZA</strong>
             <p>
               Cursando Instrumentación Petrolera (4 meses)
             </p>
-
+            <p><strong>INSTITUTO ARGENTINO DE PETROLEO Y GAS (IAPG)</strong>
             <p>
               En 2026 comenzaré a cursar la Tecnicatura en
               Petróleo dictada por el Instituto Argentino de Petróleo y Gas. 
             </p>
+            <p><strong>INSTITUTO SUPERIOR OCTUBRE</strong>
             <p>
               Tecnicatura Superior en Automatización y Robótica (Instituto Superior Octubre): 2do año cursado
             </p>
+            <p><strong>UNIVERSIDAD DE BUENOS AIRES</strong>
             <p>
               CBC aprobado de la Carrera de Ingeniería en Informatica (UBA)
             </p>
