Refactor skills section in index.html
Updated skills section for clarity and formatting.

--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 
           <!-- ESTUDIOS -->
           <div id="section4" class="detail-section">
+            <h2>ESTUDIOS</h2>
             <p><strong>POLITÉCNICO MALVINAS ARGENTINAS</strong>
               <p>
               Cursando el primer año de la Tecnicatura
@@ -392,9 +393,9 @@
             <p>POWERPOINT: Armado de presentaciones y uso de herramientas de edición</p>
             <p>POWER BI: Creación de dashboards</p>
             <p>PYTHON: Conocimientos en variables, condicionales y estructuras de control</p>
-            <p>SQL</p>: Conocimientos básicos en Base de datos y manejo de tablas relacionales. 
-            <p>COREL DRAW</p>: Manejo de herramientas de edición. 
-            <p>IMPRESIÓN 3D</p>: Uso básico de Solidwork, slicer (GCODE) en impresión 3D.  
+            <p>SQL: Conocimientos básicos en Base de datos y manejo de tablas relacionales. </p>
+            <p>COREL DRAW: Manejo de herramientas de edición. </p>
+            <p>IMPRESIÓN 3D: Uso básico de Solidwork, slicer (GCODE) en impresión 3D. </p> 
             <p>CHATGPT (IA): Uso avanzado de herramientas de Inteligencia Artificial para diseño de automatizaciones y aumento de producción en tareas diarias</p>
             <p>HTML: Manejo de lenguaje HTML y armado de paginas web</p>
             <p>VISUAL STUDIO CODE: Uso de visual studio para edición de código en Python, HTML, CSS, Base de datos</p>
