--- a/index.html
+++ b/index.html
@@ -334,7 +334,10 @@
             <p>
               CBC aprobado de la Carrera de Ingeniería en Informatica (UBA)
             </p>
-            
+            <p><strong>INSTITUTO SAN LUIS GONZAGA</strong>
+            <p>
+              Secundario completo: Perito en técnicas bancarias e Impositivas
+            </p>    
           </div>
 
           <!-- CURSOS -->
