Update vacation plans in index.html

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <p>
               Soy nacido en Buenos Aires, con descendencia japonesa, y resido en Río Grande, Tierra del Fuego, desde 2011. 
             </p>  
-            <p>Durante mi período de vacaciones de un mes en diciembre de 2025, viajaré a Neuquén con
+            <p>En el mes de diciembre viajaré a Neuquén con
               el objetivo de iniciar mi desarrollo profesional en la industria
               hidrocarburífera, con la firme intención de establecerme en la
               región.
