Update strong tags to include resaltado class

--- a/index.html
+++ b/index.html
@@ -312,31 +312,31 @@
           <!-- ESTUDIOS -->
           <div id="section4" class="detail-section">
             <h2>ESTUDIOS</h2>
-            <p><strong>POLITÉCNICO MALVINAS ARGENTINAS</strong>
+            <p><strong class="resaltado">POLITÉCNICO MALVINAS ARGENTINAS</strong>
               <p>
               Cursando el primer año de la Tecnicatura
               de Ciencia de Datos e Inteligencia artificial brindada por el Politécnico Malvinas de
               la ciudad de Río Grande.
             </p>
 
-            <p><strong>INSTITUTO TECNOLÓGICO MENDOZA</strong>
+            <p><strong class="resaltado">INSTITUTO TECNOLÓGICO MENDOZA</strong>
             <p>
               Cursando Instrumentación Petrolera (4 meses)
             </p>
-            <p><strong>INSTITUTO ARGENTINO DE PETROLEO Y GAS (IAPG)</strong>
+            <p><strong class="resaltado">INSTITUTO ARGENTINO DE PETROLEO Y GAS (IAPG)</strong>
             <p>
               En 2026 comenzaré a cursar la Tecnicatura en
               Petróleo dictada por el Instituto Argentino de Petróleo y Gas. 
             </p>
-            <p><strong>INSTITUTO SUPERIOR OCTUBRE</strong>
+            <p><strong class="resaltado">INSTITUTO SUPERIOR OCTUBRE</strong>
             <p>
               Tecnicatura Superior en Automatización y Robótica (Instituto Superior Octubre): 2do año cursado
             </p>
-            <p><strong>UNIVERSIDAD DE BUENOS AIRES</strong>
+            <p><strong class="resaltado">UNIVERSIDAD DE BUENOS AIRES</strong>
             <p>
               CBC aprobado de la Carrera de Ingeniería en Informatica (UBA)
             </p>
-            <p><strong>INSTITUTO SAN LUIS GONZAGA</strong>
+            <p><strong class="resaltado">INSTITUTO SAN LUIS GONZAGA</strong>
             <p>
               Secundario completo: Perito en técnicas bancarias e Impositivas
             </p>    
