--- a/index.html
+++ b/index.html
@@ -421,15 +421,16 @@
           <div id="section8" class="detail-section">
             <h2>DATOS PERSONALES</h2>
 
-            <p>
-              Celular/Whatsapp: "
-              <a
-                href="https://wa.me/5491122741460"
-                target="_blank"
-                style="color: #25D366; text-decoration: underline;"
-                >+54 9 11 2274 1460</a
-              >
-            </p>
+            <p style="color:#e0e0e0;">
+  <i class="fa-brands fa-whatsapp" 
+     style="color:#25D366; margin-right:6px; font-size:1rem;"></i>
+  <a href="https://wa.me/5492964XXXXXX" 
+     target="_blank" 
+     style="color:#e0e0e0; text-decoration:none;">
+    +54 9 11 2274 1460
+  </a>
+</p>
+
 
             <p>Email: higaclaudioalejandro@gmail.com</p>
             <p>Licencia de conducir habilitada - Movilidad propia</p>
