--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
 
             <p style="color:#e0e0e0;">
   <i class="fa-brands fa-whatsapp" 
-     style="color:#25D366; margin-right:6px; font-size:1rem;"></i>
-  <a href="https://wa.me/5492964XXXXXX" 
+     style="color:#25D366; margin-right:8px; font-size:1.6rem;"></i>
+  <a href="https://wa.me/5491122741460" 
      target="_blank" 
      style="color:#e0e0e0; text-decoration:none;">
     +54 9 11 2274 1460
