--- a/index.html
+++ b/index.html
@@ -429,10 +429,19 @@
      style="color:#e0e0e0; text-decoration:none;">
     +54 9 11 2274 1460
   </a>
+              
 </p>
+<p style="color:#e0e0e0;">
+  <i class="fa-solid fa-envelope" 
+     style="color:#E6BE8A; margin-right:8px; font-size:1.6rem; vertical-align:middle;"></i>
+  <a href="mailto:tu_correo@ejemplo.com" 
+     style="color:#e0e0e0; text-decoration:none;">
+    higaclaudioalejandro@gmail.com
+  </a>
+</p>            
 
 
-            <p>Email: higaclaudioalejandro@gmail.com</p>
+            
             <p>Licencia de conducir habilitada - Movilidad propia</p>
           </div>
         </section>
